Add beer search functionality
